// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing OHQtyUpdate component render component and test buttons render component with different onhands and new qty 1`] = `
Array [
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 4,
        },
        Object {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      style={
        Object {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="11"
    />
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <View
    style={
      Array [
        Object {
          "height": 45,
        },
        Object {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#0071e9",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            Object {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
            }
          }
        >
          Save
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with error 1`] = `
Array [
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 4,
        },
        Object {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      style={
        Object {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="11"
    />
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <Text
    style={
      Object {
        "color": "#b71c1c",
        "fontSize": 10,
        "marginBottom": 12,
      }
    }
  >
    [missing "en.ITEM.OH_UPDATE_API_ERROR" translation]
  </Text>,
  <View
    style={
      Array [
        Object {
          "height": 45,
        },
        Object {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#0071e9",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            Object {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
            }
          }
        >
          Save
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with invalid new qty 1`] = `
Array [
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 4,
        },
        Object {
          "borderColor": "#b71c1c",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#5FA7F2"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      style={
        Object {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="-11"
    />
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      Object {
        "color": "#b71c1c",
        "fontSize": 10,
        "marginBottom": 12,
      }
    }
  >
    [missing "en.ITEM.OH_UPDATE_ERROR" translation]
  </Text>,
  <Text
    style={
      Object {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <View
    style={
      Array [
        Object {
          "height": 45,
        },
        Object {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#5FA7F2",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            Object {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
            }
          }
        >
          Save
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with isWating true 1`] = `
Array [
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 4,
        },
        Object {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      style={
        Object {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="10"
    />
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <ActivityIndicator
    color="#0071e9"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "marginTop": 16,
      }
    }
  />,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with same onhands and new qty 1`] = `
Array [
  <View
    style={
      Object {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 4,
        },
        Object {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      style={
        Object {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="10"
    />
    <View
      style={
        Array [
          Object {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <View
    style={
      Array [
        Object {
          "height": 45,
        },
        Object {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#5FA7F2",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            Object {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
            }
          }
        >
          Save
        </Text>
      </View>
    </View>
  </View>,
]
`;
